updated feature matrix for min-max LRTA*

--- a/S2template.tex
+++ b/S2template.tex
@@ -119,7 +119,7 @@ Since there exists no "perfect" planning algorithm, many open problems and oppor
 	 \hline
 	RTAA* & \cmark & \cmark & \cmark & \xmark  & \cmark \\
 	\hline
-	LRTA* & \cmark & \cmark & \cmark & \xmark  & \xmark \\
+	min-max LRTA* & \cmark & \cmark & \cmark & \xmark  & \cmark \\
 	\hline
 	Pattern Databases & \cmark & \xmark & \xmark & \cmark & \xmark\\
 	\hline
