--- a/S2bibliography.bib
+++ b/S2bibliography.bib
@@ -89,3 +89,43 @@
   year={2012},
   publisher={Springer Science \& Business Media}
 }
+
+@article{botea2005macro,
+  title={Macro-FF: Improving AI planning with automatically learned macro-operators},
+  author={Botea, Adi and Enzenberger, Markus and M{\"u}ller, Martin and Schaeffer, Jonathan},
+  journal={Journal of Artificial Intelligence Research},
+  pages={581--621},
+  year={2005}
+}
+
+@inproceedings{erol1994htn,
+  title={HTN planning: Complexity and expressivity},
+  author={Erol, Kutluhan and Hendler, James and Nau, Dana S},
+  booktitle={AAAI},
+  volume={94},
+  pages={1123--1128},
+  year={1994}
+}
+
+@inproceedings{nau1999shop,
+  title={SHOP: Simple hierarchical ordered planner},
+  author={Nau, Dana and Cao, Yue and Lotem, Amnon and Munoz-Avila, Hector},
+  booktitle={Proceedings of the 16th international joint conference on Artificial intelligence-Volume 2},
+  pages={968--973},
+  year={1999},
+  organization={Morgan Kaufmann Publishers Inc.}
+}
+
+@article{korf2002disjoint,
+  title={Disjoint pattern database heuristics},
+  author={Korf, Richard E and Felner, Ariel},
+  journal={Artificial intelligence},
+  volume={134},
+  number={1},
+  pages={9--22},
+  year={2002},
+  publisher={Elsevier}
+}
+
+
+
